--- a/public/styles.css
+++ b/public/styles.css
@@ -11,7 +11,7 @@ header.header__wrapper {
   z-index: 10;
   top: 0;
   right: 0;
-  padding: 0 95px;
+  padding: 0 105px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -104,41 +104,52 @@ section div.hero__text-wrapper p.hero__text {
 }
 
 section div.hero__text-wrapper div.hero__button-wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
 }
 section div.hero__text-wrapper div.hero__button-wrapper button {
-    border-radius: 37px;
-    padding: 15px 36px;
-    height: 52px;
-    width: auto;
-    color: #fff;
-    background: transparent;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 22px;
-    letter-spacing: .2px;
-
+  border-radius: 37px;
+  padding: 15px 36px;
+  height: 52px;
+  width: auto;
+  color: #fff;
+  background: transparent;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 0.2px;
 }
 
-section div.hero__text-wrapper div.hero__button-wrapper button.hero__button-quote {
-    background: #23a6f0;
-    border: none;
+section
+  div.hero__text-wrapper
+  div.hero__button-wrapper
+  button.hero__button-quote {
+  background: #23a6f0;
+  border: none;
 }
-section div.hero__text-wrapper div.hero__button-wrapper button.hero__button-quote:hover {
-    background: rgba(35, 166, 240, .5);
+section
+  div.hero__text-wrapper
+  div.hero__button-wrapper
+  button.hero__button-quote:hover {
+  background: rgba(35, 166, 240, 0.5);
 }
 
-section div.hero__text-wrapper div.hero__button-wrapper button.hero__button-learn {
-    border: 1px solid #fff;
+section
+  div.hero__text-wrapper
+  div.hero__button-wrapper
+  button.hero__button-learn {
+  border: 1px solid #fff;
 }
 
-section div.hero__text-wrapper div.hero__button-wrapper button.hero__button-learn:hover {
-    background-color: rgb(180, 180, 180);
-    color: black;
+section
+  div.hero__text-wrapper
+  div.hero__button-wrapper
+  button.hero__button-learn:hover {
+  background-color: rgb(180, 180, 180);
+  color: black;
 }
 /* Hero End */
 
@@ -163,7 +174,7 @@ section.services__wrapper .services__heading-wrapper h1.services__heading {
   font-size: 40px;
   font-weight: 700;
   line-height: 57px;
-  letter-spacing: .2px;
+  letter-spacing: 0.2px;
   margin-bottom: 12px;
 }
 
@@ -171,7 +182,7 @@ section.services__wrapper .services__heading-wrapper p.services__subHeading {
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
-  letter-spacing: .2px; 
+  letter-spacing: 0.2px;
   max-width: 60%;
   text-align: center;
   margin: 0 auto;
@@ -184,7 +195,9 @@ section.services__wrapper div.services__cards-wrapper {
   gap: 40px;
 }
 
-section.services__wrapper div.services__cards-wrapper div.services__card-wrapper {
+section.services__wrapper
+  div.services__cards-wrapper
+  div.services__card-wrapper {
   display: flex;
   flex-direction: row;
   gap: 15px;
@@ -193,142 +206,173 @@ section.services__wrapper div.services__cards-wrapper div.services__card-wrapper
   padding: 25px;
   max-width: 325px;
 }
-section.services__wrapper div.services__cards-wrapper div.services__card-wrapper img {
-height: 35px;
-width: 35px;
-object-fit: contain;
-object-position: center;
+section.services__wrapper
+  div.services__cards-wrapper
+  div.services__card-wrapper
+  img {
+  height: 35px;
+  width: 35px;
+  object-fit: contain;
+  object-position: center;
 }
 
-section.services__wrapper div.services__cards-wrapper div.services__card-wrapper div.services__card-text__wrapper {
+section.services__wrapper
+  div.services__cards-wrapper
+  div.services__card-wrapper
+  div.services__card-text__wrapper {
   display: flex;
   flex-direction: column;
   gap: 7px;
 }
-section.services__wrapper div.services__cards-wrapper div.services__card-wrapper div.services__card-text__wrapper h1.services__card-header {
+section.services__wrapper
+  div.services__cards-wrapper
+  div.services__card-wrapper
+  div.services__card-text__wrapper
+  h1.services__card-header {
   font-size: 16px;
   line-height: 24px;
   font-weight: 700;
 }
-section.services__wrapper div.services__cards-wrapper div.services__card-wrapper div.services__card-text__wrapper p.services__card-text {
+section.services__wrapper
+  div.services__cards-wrapper
+  div.services__card-wrapper
+  div.services__card-text__wrapper
+  p.services__card-text {
   font-size: 14px;
   font-weight: 500;
   line-height: 24px;
-  letter-spacing: .2px;
+  letter-spacing: 0.2px;
 }
 
 /* Services Cards Ends*/
 
-
-
 /* Client Start */
 section.client__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: Montserrat;
-    color: #fff;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: Montserrat;
+  color: #fff;
+  width: 100%;
 }
 section.client__wrapper .client__heading-wrapper {
-    text-align: center;
-    margin-bottom: 55px;
-    
+  text-align: center;
+  margin-bottom: 55px;
 }
 section.client__wrapper h2.client__heading {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 57px;
-    letter-spacing: .2px;
-    margin-bottom: 12px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 57px;
+  letter-spacing: 0.2px;
+  margin-bottom: 12px;
 }
 
 section.client__wrapper p.client__text {
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 20px;
-    letter-spacing: .2px; 
-    max-width: 60%;
-    text-align: center;
-    margin: 0 auto;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0.2px;
+  max-width: 60%;
+  text-align: center;
+  margin: 0 auto;
 }
 
 section.client__wrapper .client__cards-wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 30px;
-    margin-bottom: 175px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 175px;
 }
 
 section.client__wrapper .client__cards-wrapper .client__cards {
-    display: flex;
-    flex-direction: row;
-    background-color: #fff;
-    color: black;
+  display: flex;
+  flex-direction: row;
+  background-color: #fff;
+  color: black;
 }
-section.client__wrapper .client__cards-wrapper .client__cards .client__card-text__wrapper {
-    padding: 16px 25px;
-}
-
-section.client__wrapper .client__cards-wrapper .client__cards .client__card-text__wrapper h3.client__name {
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 32px;
-    letter-spacing: .1px;
-}
-section.client__wrapper .client__cards-wrapper .client__cards .client__card-text__wrapper p.client__title {
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 24px;
-    letter-spacing: .2px;
-    color: #737373;
+section.client__wrapper
+  .client__cards-wrapper
+  .client__cards
+  .client__card-text__wrapper {
+  padding: 16px 25px;
 }
 
-section.client__wrapper .client__cards-wrapper .client__cards .client__card-text__wrapper div.client__rating{
-    margin: 8px 0;
+section.client__wrapper
+  .client__cards-wrapper
+  .client__cards
+  .client__card-text__wrapper
+  h3.client__name {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  letter-spacing: 0.1px;
 }
-section.client__wrapper .client__cards-wrapper .client__cards .client__card-text__wrapper div.client__rating i{
-    margin: 12px 0;
-    color: #F3CD03;
-}
-section.client__wrapper .client__cards-wrapper .client__cards .client__card-text__wrapper p.client__feedback {
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 20px;
-    letter-spacing: .2px;
-    color: #737373;
+section.client__wrapper
+  .client__cards-wrapper
+  .client__cards
+  .client__card-text__wrapper
+  p.client__title {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  color: #737373;
 }
 
+section.client__wrapper
+  .client__cards-wrapper
+  .client__cards
+  .client__card-text__wrapper
+  div.client__rating {
+  margin: 8px 0;
+}
+section.client__wrapper
+  .client__cards-wrapper
+  .client__cards
+  .client__card-text__wrapper
+  div.client__rating
+  i {
+  margin: 12px 0;
+  color: #f3cd03;
+}
+section.client__wrapper
+  .client__cards-wrapper
+  .client__cards
+  .client__card-text__wrapper
+  p.client__feedback {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0.2px;
+  color: #737373;
+}
 
 /* Client End */
 
-
-
 /* Prices Start */
 section.pricing__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: Montserrat;
-    color: #fff;
-    width: 100%;
-    margin-bottom: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: Montserrat;
+  color: #fff;
+  width: 100%;
+  margin-bottom: 150px;
 }
-section.pricing__wrapper .pricing__heading-wrapper{
+section.pricing__wrapper .pricing__heading-wrapper {
   display: flex;
   flex-direction: column;
   text-align: center;
   margin-bottom: 55px;
-    
 }
 section.pricing__wrapper h2.pricing__heading {
   font-size: 40px;
   font-weight: 700;
   line-height: 57px;
-  letter-spacing: .2px;
+  letter-spacing: 0.2px;
   margin-bottom: 12px;
 }
 
@@ -336,7 +380,7 @@ section.pricing__wrapper p.pricing__text {
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
-  letter-spacing: .2px; 
+  letter-spacing: 0.2px;
   max-width: 60%;
   text-align: center;
   margin: 0 auto;
@@ -345,9 +389,10 @@ section.pricing__wrapper p.pricing__text {
 section.pricing__wrapper .pricing__cards-wrapper {
   display: flex;
   flex-direction: row;
+  width: 100%;
   gap: 30px;
   align-items: center;
-  justify-content: space-evenly; 
+  justify-content: space-between
 }
 section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper {
   display: flex;
@@ -361,7 +406,10 @@ section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper {
   border-radius: 10px;
   padding: 50px 40px;
 }
-section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper span.pricing__card-badge {
+section.pricing__wrapper
+  .pricing__cards-wrapper
+  .pricing__card-wrapper
+  span.pricing__card-badge {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -377,37 +425,47 @@ section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper span.pri
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
-  letter-spacing: .1px;
-
+  letter-spacing: 0.1px;
 }
-section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper h3.pricing__card-heading {
+section.pricing__wrapper
+  .pricing__cards-wrapper
+  .pricing__card-wrapper
+  h3.pricing__card-heading {
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
-  letter-spacing: .1px;
+  letter-spacing: 0.1px;
 }
-section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper p.pricing__card-description {
+section.pricing__wrapper
+  .pricing__cards-wrapper
+  .pricing__card-wrapper
+  p.pricing__card-description {
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
-  letter-spacing: .1px;
+  letter-spacing: 0.1px;
   color: #737373;
   max-width: 160px;
 }
-section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper h4.pricing__card-price {
+section.pricing__wrapper
+  .pricing__cards-wrapper
+  .pricing__card-wrapper
+  h4.pricing__card-price {
   font-size: 40px;
   font-weight: 700;
   line-height: 57px;
-  letter-spacing: .2px;
+  letter-spacing: 0.2px;
   color: #23a6f0;
 }
-section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper p.pricing__card-price__tag {
+section.pricing__wrapper
+  .pricing__cards-wrapper
+  .pricing__card-wrapper
+  p.pricing__card-price__tag {
   color: #23a6f0;
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
-  letter-spacing: .1px;
-
+  letter-spacing: 0.1px;
 }
 section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper button {
   display: flex;
@@ -423,59 +481,154 @@ section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper button {
   font-size: 14px;
   font-weight: 700;
   line-height: 22px;
-  letter-spacing: .2px;
-  
+  letter-spacing: 0.2px;
 }
-section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper ul.pricing__features-wrapper {
+section.pricing__wrapper
+  .pricing__cards-wrapper
+  .pricing__card-wrapper
+  ul.pricing__features-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   height: 100%;
-
 }
-section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper ul.pricing__features-wrapper li.pricing__features::before{
- content: "✔";
- position: relative;
- color: #fff;
- background-color: #2DC071;
- border-radius: 50%;
- font-size: 15px;
- margin-right: 5px;
- padding: 7px 10px;
+section.pricing__wrapper
+  .pricing__cards-wrapper
+  .pricing__card-wrapper
+  ul.pricing__features-wrapper
+  li.pricing__features::before {
+  content: "✔";
+  position: relative;
+  color: #fff;
+  background-color: #2dc071;
+  border-radius: 50%;
+  font-size: 15px;
+  margin-right: 5px;
+  padding: 7px 10px;
 }
-section.pricing__wrapper .pricing__cards-wrapper .pricing__card-wrapper ul.pricing__features-wrapper li.pricing__features {
-font-size: 14px;
-font-weight: 600;
-line-height: 24px;
-letter-spacing: .2px;
-white-space: nowrap;
+section.pricing__wrapper
+  .pricing__cards-wrapper
+  .pricing__card-wrapper
+  ul.pricing__features-wrapper
+  li.pricing__features {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  white-space: nowrap;
 }
 
 /* Prices End */
 
+/* Contact us start */
+section.contact__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: Montserrat;
+  color: #fff;
+  width: 100%;
+  margin-bottom: 162px;
+}
+
+section.contact__wrapper div.contact__header-wrapper {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 80%;
+  margin-bottom: 235px;
+}
+
+section.contact__wrapper div.contact__header-wrapper h1.contact__heading {
+  font-size: 40px;
+    font-weight: 700;
+    line-height: 57px;
+    letter-spacing: .2px;
+    margin-bottom: 12px;
+}
+section.contact__wrapper div.contact__header-wrapper p.contact__text {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: .2px;
+  max-width: 60%;
+  text-align: center;
+  margin: 0 auto;
+}
+section.contact__wrapper div.contact__cards-wrapper {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 343px;
+  width:100%;
+  background: #fff;
+  color: #000;
+  
+}
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper.middle {
+  height: 395px;
+  position: relative;
+  top: -25px;
+  background: #23a6f0;
+  color: #fff;
+}
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper.middle i.contact__card-image {
+  color: #fff;
+}
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper i.contact__card-image {
+  font-size: 72px;
+  margin-bottom: 15px;
+  color: #23a6f0;
+}
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper p.contact__card-email {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: .2px;
+  margin-bottom: 15px;
+
+}
+
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper h2.contact__card-support {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: .1px;
+  margin-bottom: 15px;
+}
+
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper button.contact__card-button {
+  background: transparent;
+  transition: all ease-in-out .3ms;
+  height: 54px;
+  width: 50%;
+  border-radius: 37px;
+  border: 1px #23a6f0 solid;
+  color: #23a6f0;
+}
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper button.contact__card-button:hover {
+  background-color: rgba(35, 166, 240, .8);
+  color: #fff;
+}
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper.middle button.contact__card-button:hover {
+  background-color: rgba(255, 255, 255, .9);
+  color: #23a6f0;
+}
+section.contact__wrapper div.contact__cards-wrapper div.contact__card-wrapper.middle button.contact__card-button {
+  border: 1px #fff solid;
+  color: #fff;
+}
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* Contact us end */
 
 /* Start Footer */
 footer {
